<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/itemListFragment">

    <fragment
        android:id="@+id/itemListFragment"
        android:name="com.carlosjordi.basicapp.ui.itemlist.ItemListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_item_list">
        <action
            android:id="@+id/action_itemListFragment_to_itemDetailFragment"
            app:destination="@id/itemDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_itemListFragment_to_addItemFragment"
            app:destination="@id/addItemFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.carlosjordi.basicapp.ui.itemdetail.ItemDetailFragment"
        android:label="fragment_item_detail"
        tools:layout="@layout/fragment_item_detail">
        <argument
            android:name="item"
            app:argType="com.carlosjordi.basicapp.entity.Item" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.carlosjordi.basicapp.ui.about.AboutFragment"
        android:label="@string/fragment_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.carlosjordi.basicapp.ui.additem.AddItemFragment"
        android:label="@string/fragment_add_item"
        tools:layout="@layout/fragment_add_item">
        <action
            android:id="@+id/action_addItemFragment_to_itemListFragment"
            app:destination="@id/itemListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/itemListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>